--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,42 +1,37 @@
 services:
-    nginx:
-        build:
-            context: .
-            dockerfile: _docker/production/nginx/Dockerfile
-        ports:
-            - "${APP_PORT}:80"
-        depends_on:
-            - php
+  db:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DATABASE}
+    volumes:
+      - ./_docker/data/postgres:/var/lib/postgresql/data
 
-    php:
-        build:
-            context: .
-            dockerfile: _docker/production/php/Dockerfile
-        volumes:
-          - vendor:/app/vendor
+  php:
+    image: ravshan014/tour-crm-php:1
+    restart: always
+    depends_on:
+      - db
 
-    db:
-        image: postgres:latest
-        environment:
-            POSTGRES_USER: ${DB_USERNAME}
-            POSTGRES_PASSWORD: ${DB_PASSWORD}
-            POSTGRES_DB: ${DB_DATABASE}
-        volumes:
-            - postgres:/var/lib/postgresql/data
+  nginx:
+    image: ravshan014/tour-crm-nginx:1
+    ports:
+      - "${APP_PORT}:80"
+    restart: always
+    depends_on:
+      - php
 
-    pgadmin:
-        image: dpage/pgadmin4
-        environment:
-            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-        volumes:
-            - pgadmin:/root/.pgadmin
-        ports:
-            - "${PGADMIN_PORT}:80"
-        depends_on:
-            - db
-
-volumes:
-    postgres:
-    pgadmin:
-    vendor:
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+    volumes:
+      - ./_docker/data/pgadmin:/root/.pgadmin
+    ports:
+      - "${PGADMIN_PORT}:80"
+    depends_on:
+      - db
