--- a/_docker/production/php/Dockerfile
+++ b/_docker/production/php/Dockerfile
@@ -28,9 +28,8 @@ COPY ./composer.json composer.json
 COPY ./composer.lock composer.lock
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
-RUN curl -sS https://getcomposer.org/installer | php -- \
-    --filename=composer \
-    --install-dir=/usr/local/bin
+RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/usr/local/bin --quiet  \
+    && rm -rf /root/.composer/cache
 
 COPY . .
 
