prepare production optimized docker images

--- a/_docker/production/php/Dockerfile_old
+++ b/_docker/production/php/Dockerfile_old
@@ -1,6 +1,4 @@
-FROM php:8.2-fpm
-
-RUN adduser nonroot
+FROM php:8.2-fpm as builder
 
 RUN apt-get update && apt-get install -y \
     curl \
@@ -22,25 +20,37 @@ RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && \
     docker-php-ext-install zip && \
     docker-php-ext-install gd
 
+RUN adduser nonroot
+
+
+FROM builder as composer
+
 RUN curl -sS https://getcomposer.org/installer | php -- \
     --filename=composer \
     --install-dir=/usr/local/bin
-
-USER nonroot
 
 WORKDIR /app
 
 COPY ./composer.json ./composer.lock ./
 
-# Install only production dependencies
-RUN composer install --no-dev --no-scripts --no-autoloader --no-interaction && \
-    composer clear-cache
+RUN composer install --no-dev --no-scripts --no-autoloader --no-interaction
+
+
+##### PRODUCTION IMAGE PHP ######
+FROM php:8.2-fpm-alpine
+
+COPY --from=builder /etc/passwd /etc/passwd
+COPY --from=builder /usr/local/etc/php /usr/local/etc/php
+COPY --from=builder /usr/local/lib/php /usr/local/lib/php
 
 COPY ./_docker/production/php/php.ini /usr/local/etc/php/conf.d/php.ini
 
-COPY --chown=nonroot:nonroot . .
+WORKDIR /app
 
-# Generate optimized autoload files
-RUN composer dump-autoload --optimize --no-dev --classmap-authoritative
+USER nonroot
+
+COPY ./ ./
+
+COPY --from=composer /app/vendor /app/vendor
 
 EXPOSE 9000
