--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,13 +1,13 @@
 services:
   db:
     image: postgres:17.2-alpine
-#    restart: always
+    #    restart: always
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
     volumes:
-      - ./_docker/data/postgres:/var/lib/postgresql/data
+      - tour-crm-db:/var/lib/postgresql/data
 
   php:
     image: ravshan014/tour-crm-php:1
@@ -18,7 +18,7 @@ services:
       APP_NAME: Tour CRM
       APP_URL: http://localhost
       DB_HOST: db
-      DB_PORT:  5432
+      DB_PORT: 5432
       DB_DATABASE: ${DB_DATABASE}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
@@ -40,8 +40,12 @@ services:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
     volumes:
-      - ./_docker/data/pgadmin:/root/.pgadmin
+      - tour-crm-pgadmin:/root/.pgadmin
     ports:
       - "${PGADMIN_PORT}:80"
     depends_on:
       - db
+
+volumes:
+  tour-crm-db:
+  tour-crm-pgadmin:
