--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres:17.2-alpine
-    #    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -11,7 +11,7 @@ services:
 
   php:
     image: ravshan014/tour-crm-php:1
-    restart: always
+    restart: unless-stopped
     environment:
       APP_ENV: local
       APP_DEBUG: true
@@ -29,13 +29,13 @@ services:
     image: ravshan014/tour-crm-nginx:1
     ports:
       - "${APP_PORT}:80"
-    restart: always
+    restart: unless-stopped
     depends_on:
       - php
 
   pgadmin:
     image: dpage/pgadmin4:8.14
-    restart: always
+    restart: unless-stopped
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
