--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,17 +1,20 @@
 services:
   db:
     image: postgres:17.2-alpine
-    restart: unless-stopped
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
       - tour-crm-db:/var/lib/postgresql/data
 
   php:
-    image: ravshan014/tour-crm-php:1
-    restart: unless-stopped
+    image: ravshan014/tour-crm-php:3
     environment:
       APP_ENV: local
       APP_DEBUG: true
@@ -23,19 +26,18 @@ services:
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
     depends_on:
-      - db
+        db:
+          condition: service_healthy
 
   nginx:
     image: ravshan014/tour-crm-nginx:1
     ports:
       - "${APP_PORT}:80"
-    restart: unless-stopped
     depends_on:
       - php
 
   pgadmin:
     image: dpage/pgadmin4:8.14
-    restart: unless-stopped
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
@@ -44,7 +46,8 @@ services:
     ports:
       - "${PGADMIN_PORT}:80"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
 volumes:
   tour-crm-db:
