--- a/_docker/production/php/Dockerfile_2
+++ b/_docker/production/php/Dockerfile_2
@@ -1,36 +1,31 @@
-# Use the official PHP 8.2 FPM Alpine base image
-FROM php:8.2-fpm-alpine
+FROM php:8.2-fpm
 
-# Install dependencies and PHP extensions
-RUN set -ex \
-    # Install build dependencies
-    && apk add --virtual .build-deps \
-        libtool \
-        libzip-dev \
-        freetype-dev \
-        libjpeg-turbo-dev \
-        libpng-dev \
-        postgresql-dev \
-        zlib-dev \
-    \
-    # Install runtime dependencies
-    && apk add \
-        libzip \
-        freetype \
-        libjpeg-turbo \
-        libpng \
-        zlib
+RUN apt-get update && apt-get install -y \
+    curl \
+    unzip \
+    libpq-dev \
+    libc-client-dev \
+    libicu-dev \
+    zlib1g-dev \
+    libpng-dev \
+    libzip-dev \
+    libkrb5-dev \
+    zip && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-configure gd --with-freetype --with-jpeg &&  \
-    docker-php-ext-install -j$(nproc) pdo_pgsql gd intl zip
+RUN docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && \
+    docker-php-ext-install pgsql pdo_pgsql && \
+    docker-php-ext-configure intl && \
+    docker-php-ext-install -j$(nproc) intl && \
+    docker-php-ext-install zip && \
+    docker-php-ext-install gd
 
 COPY --from=composer:2.4.4 /usr/bin/composer /usr/local/bin/composer
 
-RUN addgroup -S nonrootgroup && adduser -S -G nonrootgroup nonroot
+RUN adduser nonroot
 
 USER nonroot
 
-# Set working directory
 WORKDIR /app
 
 COPY ./composer.* .
@@ -43,8 +38,4 @@ COPY --chown=nonroot:nonroot . .
 
 RUN composer dump-autoload --optimize
 
-# Expose default PHP-FPM port
 EXPOSE 9000
-
-# Start PHP-FPM
-CMD ["php-fpm"]
