--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,4 +1,15 @@
 services:
+#  reverse-proxy:
+#    image: traefik:v3.1
+#    command:
+#      - "--api.insecure=true"
+#      - "--providers.docker=true"
+#    ports:
+#      - "80:80"
+#      - "8080:8080"
+#    volumes:
+#      - "/var/run/docker.sock:/var/run/docker.sock"
+
   db:
     image: postgres:17.2-alpine
     environment:
@@ -6,8 +17,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_DATABASE}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
-      interval: 10s
+      test: [ "CMD", "pg_isready" ]
+      interval: 5s
       timeout: 5s
       retries: 5
     volumes:
