--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,13 +2,22 @@ services:
 #  reverse-proxy:
 #    image: traefik:v3.1
 #    command:
-#      - "--api.insecure=true"
 #      - "--providers.docker=true"
+#      - "--providers.docker"
+#      - "--providers.docker.exposedbydefault=false"
+#      - "--entryPoints.websecure.address=:443"
+#      - "--certificatesresolvers.myresolver.acme.tlschallenge=true"
+#      - "--certificatesresolvers.myresolver.acme.email=mro@mrodev.site"
+#      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+#      - "--entrypoints.web.address=:80"
+#      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
+#      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
 #    ports:
 #      - "80:80"
-#      - "8080:8080"
+#      - "443:443"
 #    volumes:
-#      - "/var/run/docker.sock:/var/run/docker.sock"
+#      - letsencrypt:/letsencrypt
+#      - /var/run/docker.sock:/var/run/docker.sock
 
   db:
     image: postgres:17.2-alpine
