--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,17 @@ services:
         depends_on:
             - db
 
+    mailhog:
+        image: mailhog/mailhog
+        restart: always
+        ports:
+            - "${MAILHOG_PORT}:8025"
+            - "1025:1025"
+        volumes:
+            - mailhog:/data
+
 volumes:
     postgres:
     pgadmin:
     vendor:
+    mailhog:
