--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,67 +1,33 @@
-name: CI/CD for Laravel
+name: ci
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      db:
-        image: postgres:17.2-alpine
-        env:
-          POSTGRES_USER: test1_u
-          POSTGRES_PASSWORD: test1_p
-          POSTGRES_DB: testing
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U user -d testing"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          php-version: 8.2
-          extensions: pdo_pgsql, intl, zip, gd
-          coverage: none
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Install Dependencies
-        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Set Up Laravel Environment
-        run: cp .env.testing .env
-
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Run Migrations
-        run: php artisan migrate --force
-
-      - name: Run Tests
-        run: php artisan test
-
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v0.1.4
+      - name: Build and test
+        uses: docker/build-push-action@v6
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            docker pull your-docker-image
-            docker-compose -f docker-compose.prod.yml up -d
+          target: test
+          load: true
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          target: final
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
