--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,8 @@ services:
             POSTGRES_PASSWORD: ${DB_PASSWORD}
             POSTGRES_DB: ${DB_DATABASE}
         volumes:
-            - postgres:/var/lib/postgresql/data
+            - ./_docker/data/postgres:/var/lib/postgresql/data
+#            - postgres:/var/lib/postgresql/data
 
     pgadmin:
         image: dpage/pgadmin4:8.14
