--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,12 @@
 .git
 .idea
-vendor
+.github
 _docker/data
+vendor
+node_modules
 backups
+
+.env
+README.md
+docker-compose.yml
+docker-compose-prod.yml
