Up php to 8.2 version

--- a/.env.testing
+++ b/.env.testing
@@ -12,17 +12,11 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=testing
-DB_USERNAME=test1_u
-DB_PASSWORD=test1_p
-
-TEST_DB_HOST=localhost
-TEST_DB_PORT=5432
-TEST_DB_DATABASE=testing
-TEST_DB_USERNAME=test1_u
-TEST_DB_PASSWORD=test1_p
+DB_USERNAME=testing
+DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
