--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,11 +73,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ${{ secrets.APP_PATH }}
-            git pull origin
-            docker-compose -f docker-compose-prod.yml down --remove-orphans
-            docker-compose -f docker-compose-prod.yml up -d --build
-            docker-compose -f docker-compose-prod.yml exec php composer install --no-interaction --no-progress --no-suggest
-            docker-compose -f docker-compose-prod.yml exec php php artisan migrate --force
-            docker-compose -f docker-compose-prod.yml exec php php artisan optimize:clear
-            docker-compose -f docker-compose-prod.yml exec php php artisan optimize
-            docker-compose -f docker-compose-prod.yml exec php php artisan icons:cache
+            ./build.sh
