--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,14 +40,14 @@ services:
         depends_on:
             - db
 
-    mailhog:
-        image: mailhog/mailhog
-        restart: always
-        ports:
-            - "${MAILHOG_PORT}:8025"
-            - "1025:1025"
-        volumes:
-            - mailhog:/data
+#    mailhog:
+#        image: mailhog/mailhog
+#        restart: always
+#        ports:
+#            - "${MAILHOG_PORT}:8025"
+#            - "1025:1025"
+#        volumes:
+#            - mailhog:/data
 
 volumes:
     postgres:
