--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.1",
         "ext-intl": "*",
+        "ext-zip": "*",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
@@ -17,7 +18,7 @@
         "laravel/tinker": "^2.8",
         "phpoffice/phpspreadsheet": "^3.8",
         "phpoffice/phpword": "^1.3",
-        "ext-zip": "*"
+        "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
