--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
     nginx:
-        image: nginx:1.22-alpine
+        image: nginx:1.26.0-alpine
         volumes:
             - ./:/app
             - ./_docker/development/nginx/conf.d:/etc/nginx/conf.d
@@ -11,11 +11,13 @@ services:
 
     php:
         build:
+            args:
+                uid: ${UID}
+                gid: ${GID}
             context: _docker/development
             dockerfile: php/Dockerfile
         volumes:
             - ./:/app
-            - vendor:/app/vendor
         depends_on:
             - db
 
@@ -31,12 +33,12 @@ services:
     #            - postgres:/var/lib/postgresql/data
 
     pgadmin:
-        image: dpage/pgadmin4:8.14
+        image: dpage/pgadmin4:latest
         environment:
             PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
         volumes:
-            - pgadmin:/root/.pgadmin
+            - ./_docker/data/pgadmin:/root/.pgadmin
         ports:
             - "${PGADMIN_PORT}:80"
         depends_on:
@@ -51,8 +53,8 @@ services:
 #        volumes:
 #            - mailhog:/data
 
-volumes:
-    postgres:
-    pgadmin:
-    vendor:
-    mailhog:
+#volumes:
+#    postgres:
+#    pgadmin:
+#    vendor:
+#    mailhog:
