Change whole theme in admin panel

--- a/_docker/development/php/Dockerfile
+++ b/_docker/development/php/Dockerfile
@@ -12,6 +12,8 @@ RUN apt-get update && apt-get install -y \
     libpng-dev \
     libzip-dev \
     libkrb5-dev \
+    nodejs \
+    npm \
     zip && \
     rm -rf /var/lib/apt/lists/*
 
