Change nginx to volume

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -53,7 +53,7 @@ services:
     ports:
       - "${APP_PORT}:80"
     volumes:
-      - ./public /app/public
+      - ./public:/app/public
     depends_on:
       - php
 
