--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
       - ./_docker/development/postgres:/docker-entrypoint-initdb.d
       - ./_docker/data/postgres:/var/lib/postgresql/data
   #            - postgres:/var/lib/postgresql/data
+    ports:
+      - "55432:5432"
 
   pgadmin:
     image: dpage/pgadmin4:latest
