--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,14 @@
         "ext-intl": "*",
         "ext-zip": "*",
         "filament/filament": "^3.2",
+        "google/apiclient": "^2.18",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "*",
         "laravel/tinker": "^2.8",
         "phpoffice/phpword": "^1.3",
-        "ysfkaya/filament-phone-input": "^3.1",
-        "pxlrbt/filament-excel": "^2.1"
+        "pxlrbt/filament-excel": "^2.1",
+        "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
