--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,14 +48,14 @@ services:
 #    depends_on:
 #      - db
 #
-#  mailhog:
-#    image: mailhog/mailhog
-#    restart: always
-#    ports:
-#      - "${MAILHOG_PORT}:8025"
-#      - "1025:1025"
-#    volumes:
-#      - mailhog:/data
+  mailhog:
+    image: mailhog/mailhog
+    restart: always
+    ports:
+      - "${MAILHOG_PORT}:8025"
+      - "1025:1025"
+    volumes:
+      - ./_docker/data/mailhog:/data
 
 #volumes:
   #    postgres:
