feat: update getDescriptionAttribute to allow null values in WebTour and WebTourAccommodation

--- a/.env.testing
+++ b/.env.testing
@@ -15,7 +15,7 @@ DB_CONNECTION=pgsql
 DB_HOST=db
 DB_PORT=5432
 DB_DATABASE=testing
-DB_USERNAME=testing
+DB_USERNAME=developer
 DB_PASSWORD=123456
 
 BROADCAST_DRIVER=log
